--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,6 +5,7 @@ kiwisolver==1.4.5
 matplotlib==3.7.2
 numpy==1.25.2
 packaging==23.1
+pandas==2.1.0
 Pillow==10.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
